--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@ initial-scale=1.0">
 <body>
 <h1>Welcome to Web Development!</h1>
 <p>This is my first HTML page.</p>
+<h2>Subheading to web development!</h2>
+<p>An HTML basic template page.</p>  
 </body>
 </html>
